--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href = "https://www.cricbuzz.com/live-cricket-scores/88674/wef-vs-nors-21st-match-the-hundred-mens-competition-2024">Match</a></li>
+			<li><a href = "https://www.cricbuzz.com/live-cricket-scores/96186/rsa-vs-wi-1st-test-south-africa-tour-of-west-indies-2024">Second Match</a></li>
+			<li><a href = "https://www.cricbuzz.com/live-cricket-scores/88828/welw-vs-norw-21st-match-the-hundred-womens-competition-2024">Third Match</a></li>
+		</ul>
+	</nav>
+	<div>
+		<h1>3 random audios</h1>
+		<audio controls>
+			<source src = " http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
+		</audio>
+		<audio controls>
+			<source src = "  http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"/>
+		</audio>
+		<audio controls>
+			<source src = "  http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/>
+		</audio>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
