--- a/main.html
+++ b/main.html
@@ -15,18 +15,12 @@
 			<li><a href = "https://www.cricbuzz.com/live-cricket-scores/88828/welw-vs-norw-21st-match-the-hundred-womens-competition-2024">Third Match</a></li>
 		</ul>
 	</nav>
-	<audios>
+	<main>
 		<h1>3 random audios</h1>
-		<audio controls>
-			<source src = " http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
-		</audio>
-		<audio controls>
-			<source src = "  http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"/>
-	    </audio>
-		<audio controls>
-			<source src = "  http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/>
-		</audio>
-	</audios>
+		<audio src = " http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+		<audio src = "  http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		<audio  src = "  http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
